public/resources/scss/stats.scss
/* ... */
#stats_for_player,
#stats_for_profile {
  position: relative;
  display: inline-block;
  color: var(--text-hex);
  font-weight: 600;
  cursor: context-menu;
  background-color: rgba(127, 127, 127, 0.2);
  border-radius: 100px;
  padding: 0 15px;
  height: 54px;
  line-height: 54px;
  vertical-align: middle;
  font-size: 30px;
}

#stats_for_player .emoji {
  vertical-align: middle;
  height: 28px;
  margin-top: -4px;
}

#stats_for_profile .emoji {
  vertical-align: middle;
  height: 32px;
  margin-top: -5px;
  margin-left: -5px;
}

.rank-tag {
  display: inline-flex;
  font-size: 18px;
  height: 34px;
  line-height: 34px;
  margin-top: 10px;
  margin-left: -5px;
  border-radius: 100px;
  vertical-align: top;
  font-weight: 700;
  color: white;
  overflow: hidden;
  @supports (overflow: clip) {
    overflow: clip;
  }

  .rank-name {
    padding: 0 15px;
  }

  .rank-plus {
    padding-right: 8px;
    position: relative;
    z-index: 1;

    &::before {
      content: "";
      z-index: -1;
      position: absolute;
      top: 0;
      bottom: 0;
      left: -7px;
      right: 0;
      transform: skew(-20deg);
      background-color: inherit;
    }
  }

  div {
    display: inline-block;
  }
}

#other_players,
#other_profiles {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 100;
  background-color: rgba(var(--grey_background-rgb), 0.95);
  min-width: 260px;
  clip-path: ellipse(0% 0% at 0% 0%);
  transition:
    clip-path 0.3s,
    visibility 0.3s;
  visibility: hidden;
  border-radius: 17px;
  padding: 0;
  margin: 0;
  overflow: hidden;
  @supports (overflow: clip) {
    overflow: clip;
  }

  :focus-within > &,
  :hover > & {
    clip-path: ellipse(200% 200% at 0% 0%);
    visibility: visible;
  }

  li {
    display: contents;

    .goto {
      display: block;
      color: var(--text-hex);
      text-decoration: none;
      padding: 20px;
      width: 100%;
      background-color: rgba(var(--text-rgb), 0);
      transition: background-color 0.2s;
      box-sizing: border-box;
      min-width: 200px;

      &:focus,
      &:hover {
        background-color: rgba(var(--text-rgb), 0.2);
        outline: none;
      }

      span {
        display: block;
      }
    }
  }

  .goto-last-played {
    font-size: 15px;
    color: rgba(var(--text-rgb), 0.8);
    line-height: normal;
  }

  .kicked {
    text-decoration: line-through;
  }
}

#additional_player_stats {
  font-size: 15px;
  position: relative;
  width: 100%;
}

.additional-player-stat {
  -webkit-appearance: none;
  appearance: none;
  position: relative;
  padding: 0 12px;
  border: none;
  margin-right: 7px;
  margin-top: 15px;
  height: 29px;
  line-height: 29px;
  box-sizing: border-box;
  background-color: rgba(var(--icon-rgb), 0.9);
  display: inline-block;
  border-radius: 99999px;
  text-decoration: none;
  color: white;
  font-size: inherit;
  font-weight: 600;
  transition: background-color 0.1s;
  vertical-align: top;
  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);

  &:hover::after {
    color: rgba(255, 255, 255, 0.9);
  }
}

button.additional-player-stat {
  cursor: pointer;
}

#reveal_socials {
  width: 29px;
  padding: 0;
  text-align: center;
  font-weight: 700;
  font-size: 18px;
  background-image: url(/resources/img/icons/chevron-right.png);
  background-position: center center;
  background-size: 24px 24px;
  background-repeat: no-repeat;
  user-select: none;

  &.socials-shown {
    background-image: url(/resources/img/icons/chevron-left.png);
  }

  &::after {
    content: "";
  }
}

#additional_socials {
  display: inline-block;
  transition: max-width 0.2s;
}

#additional_socials .additional-player-stat:not(#reveal_socials) {
  display: none;
}

#additional_socials.socials-shown .additional-player-stat {
  display: inline-block !important;
}

.addition-player-stat::after {
  pointer-events: none;
}

.additional-player-stat:focus-visible,
.additional-player-stat:hover {
  background-color: var(--icon-hex);
}

a.additional-player-stat:hover {
  color: white;
}

.additional-player-stat.external-link {
  padding-right: 35px;
}

.additional-player-stat.external-link::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  right: 8px;
  width: 20px;
  background-image: url(../img/icons/open-in-new.png);
  background-position: 0 center;
  background-size: 18px 18px;
  background-repeat: no-repeat;
}

.additional-player-stat.external-icon:not(.external-discord),
.additional-player-stat.svg-icon {
  width: 29px;
  padding: 0;
}

.additional-player-stat.external-discord {
  padding-right: 12px;
  padding-left: 30px;
}

.additional-player-stat.external-icon::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  width: 100%;
  background-position: center center;
  background-size: 18px 18px;
  background-repeat: no-repeat;
}

.additional-player-stat.external-icon.external-discord::after {
  left: 8px;
  right: auto;
  width: 20px;
  background-position: 0 center;
}

.additional-player-stat.copy-text {
  cursor: copy;
  user-select: none !important;
}

.additional-player-stat.svg-icon {
  display: inline-grid;
  place-items: center;
}

.additional-player-stat.svg-icon svg {
  width: 18px;
  height: 18px;
}

.additional-player-stat.svg-icon.favorite svg {
  width: 20px;
  height: 20px;
}

.additional-player-stat.favorite:not([aria-checked="true"]) .solid {
  visibility: hidden;
}

.additional-player-stat.favorite[aria-checked="true"] .outline {
  visibility: hidden;
}

.additional-player-stat.external-twitter::after {
  background-image: url(../img/icons/twitter.png);
}

.additional-player-stat.external-youtube::after {
  background-image: url(../img/icons/youtube.png);
}

.additional-player-stat.external-twitch::after {
  background-image: url(../img/icons/twitch.png);
}

.additional-player-stat.external-instagram::after {
  background-image: url(../img/icons/instagram.png);
}
/* ... */

